--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- <link rel="icon" type="image/svg+xml" href="assets/img/urku-ico.svg"> -->
+  
+
+  <!-- SLIDER -->
+  <link rel="stylesheet" type="text/css" href="assets/css/demo.css" />
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+  <link rel="stylesheet" type="text/css" href="assets/css/elastislide.css" />
+  <!-- <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow&v1' rel='stylesheet' type='text/css' />
+  <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css' /> -->
+  <noscript>
+    <style>
+      .es-carousel ul{
+        display:block;
+      }
+    </style>
+  </noscript>
+  <script id="img-wrapper-tmpl" type="text/x-jquery-tmpl">	
+    <div class="rg-image-wrapper">
+      {{if itemsCount > 1}}
+        <div class="rg-image-nav">
+          <a href="#" class="rg-image-nav-prev">Previous Image</a>
+          <a href="#" class="rg-image-nav-next">Next Image</a>
+        </div>
+      {{/if}}
+      <div class="rg-image"></div>
+      <div class="rg-loading"></div>
+      <div class="rg-caption-wrapper">
+        <div class="rg-caption" style="display:none;">
+          <p></p>
+        </div>
+      </div>
+    </div>
+  </script>
+  <!-- FIN SLIDER -->
+
   <link rel="icon" type="image/png" href="assets/img/logo.png">
   <link rel="stylesheet" href="assets/css/aurora-pack.min.css">
   <link rel="stylesheet" href="assets/css/aurora-theme-base.min.css">
@@ -17,5 +51,13 @@
   
   <script src="assets/js/svg4everybody.min.js"></script>
   <script>svg4everybody();</script>
+
+  <!-- SLIDER -->
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="assets/js/jquery.tmpl.min.js"></script>
+  <script type="text/javascript" src="assets/js/jquery.easing.1.3.js"></script>
+  <script type="text/javascript" src="assets/js/jquery.elastislide.js"></script>
+  <script type="text/javascript" src="assets/js/gallery.js"></script>
+  <!-- FIN SLIDER -->
 </body>
 </html>
